--- a/Web/Areas/Logistics/Views/DispatchAllocation/_AllocateProjectCode.cshtml
+++ b/Web/Areas/Logistics/Views/DispatchAllocation/_AllocateProjectCode.cshtml
@@ -47,7 +47,7 @@
                          .Events(e => e.DataBound("onDataBound"))
                         .DataSource(dataSource => dataSource
                             .Ajax()
-                            .Read(read => read.Action("AllocateProjectCode", "DispatchAllocation", new { regionId = Model[0], status = Model[1] }))
+                            .Read(read => read.Action("AllocateProjectCode", "DispatchAllocation", new { regionId = Model[0], status = "Project Code Assigned" }))
 
                          // .PageSize(5)
                          )
