--- a/Web/Areas/Logistics/Views/FDPSIAllocation/Index.cshtml
+++ b/Web/Areas/Logistics/Views/FDPSIAllocation/Index.cshtml
@@ -116,7 +116,7 @@
                                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion_zone" href="#collapse_zone{{zone.zoneId}}">
                                     <i class="icon-move icon-align-right"></i><span> {{zone.name}} [{{zone.allocatedAmount | number:2}} of {{zone.requestedAmount | number:2}}]</span>
                                 </a>
-                                <div style="margin:auto; text-align:center;">
+                                <div style="margin: auto; text-align: center;">
                                     <button ng-show="zone.allocatedAmount==zone.requestedAmount && saved==1" ng-click="on_Allocation_Done(zone.id)" class="btn btn-mini btn-primary"><i class="icon-ok"></i>@Html.Translate("Commit")</button>
 
                                 </div>
@@ -276,7 +276,7 @@
 </div>
 
 <script type="text/javascript">
-
+    
     /*
     SIPCAllocationID
     RequisitionDetailID
@@ -284,8 +284,7 @@
     AllocatedAmount
     AllocationType
     */
-    function submitform()
-    {
+    function submitform() {
         if( $$scope.saved)
         {
             alert("Already Up to date");
