Upgraded other implementation of requisition to workflow

--- a/Web/Areas/Logistics/Views/DispatchAllocation/AllocateProjectCode.cshtml
+++ b/Web/Areas/Logistics/Views/DispatchAllocation/AllocateProjectCode.cshtml
@@ -63,7 +63,7 @@
                          )
                          .Scrollable(scroll => scroll.Height(350))
 
-                         .Selectable(select => select.Mode(GridSelectionMode.Single))
+                         //.Selectable(select => select.Mode(GridSelectionMode.Single))
                          .Navigatable()
                          .Filterable(filterable => filterable
                              .Extra(false)
