--- a/Web/Areas/Logistics/Views/DispatchAllocation/_ApprovedRequisitions.cshtml
+++ b/Web/Areas/Logistics/Views/DispatchAllocation/_ApprovedRequisitions.cshtml
@@ -71,7 +71,7 @@
     // .PageSize(5)
     )
     .Scrollable(scroll => scroll.Height(350))
-    .Selectable(select => select.Mode(GridSelectionMode.Single))
+    //.Selectable(select => select.Mode(GridSelectionMode.Single))
     .Navigatable()
     .Filterable(filterable => filterable
     .Extra(false)
